Move database plan to /db folder.

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -1,7 +1,7 @@
 [core]
 	engine = pg
-	plan_file = sqitch.plan
-	top_dir = .
+	plan_file = db/sqitch.plan
+	top_dir = db
 [target "db_dev"]
 	uri = db:pg://yourself:protected@localhost/yourdatabase
 [engine "pg"]
