--- a/sqitch.conf
+++ b/sqitch.conf
@@ -4,6 +4,8 @@
 	top_dir = db
 [target "db_dev"]
 	uri = db:pg://yourself:protected@localhost/yourdatabase
+[target "travis"]
+	uri = db:pg://postgres@localhost/yourdatabase
 [engine "pg"]
 	target = db_dev
 	client = bin/psql
