--- a/sqitch.conf
+++ b/sqitch.conf
@@ -3,9 +3,9 @@
 	plan_file = db/sqitch.plan
 	top_dir = db
 [target "db_dev"]
-	uri = db:pg://yourself:protected@localhost/yourdatabase
+	uri = db:pg://localhost/yourdatabase
 [target "travis"]
-	uri = db:pg://postgres@localhost/yourdatabase
+	uri = db:pg://localhost/yourdatabase
 [engine "pg"]
 	target = db_dev
 	client = bin/psql
