--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -15,3 +15,8 @@ database:
     quote_char: '"'
     name_sep: '.'
     pg_enable_utf8: 1
+redis:
+  default:
+    host: localhost
+    port: 6379
+    index: 1
