--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,17 @@ perl:
   - "5.20"
   - "5.22"
   - "5.24"
-#  - "5.26"
+  - "5.26"
 services:
   - postgresql
   - redis-server
 addons:
   postgresql: "9.6"
+before_install:
+   - git clone git://github.com/travis-perl/helpers
+   - source helpers/init
+   - build-perl
+   - perl -V
 before_script:
   - psql -c "CREATE DATABASE yourdatabase ENCODING=utf8;" -U postgres
   - sqitch deploy --target travis
